--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
                                 <li><a href="#/templates">{{ 'link.admin.templates' | translate }}</a></li>
                                 <li><a href="#/accounting">{{ 'link.accounting' | translate }}</a></li>
                                 <li><a href="#/game">{{ 'link.game' | translate }}</a></li>
+                                 <li><a href="#/currencyrate">{{ 'link.currencyrate' | translate }}</a></li>
                             </ul>
                         </li>
                     </ul>
